--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div  class="half">
             <h2>Dream Bif</h2>
-            <h3>Become WorldClass Developer</h3>
+            <h3 class="orange-highlight" >Become WorldClass Developer</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui magnam ducimus aut ab repellendus quidem saepe, fugiat recusandae quod voluptas deserunt quia accusantium eveniet. Atque consequatur optio dicta inventore, ipsam amet commodi minus cumque asperiores vero repellat sed itaque debitis vitae? Molestias eos in praesentium.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mozahid679">Download Resume</a>
         </div>
